fixed featuredtext hiding behind bannerimg

--- a/src/components/0ShopPage/FeaturedText/FeaturedText.css
+++ b/src/components/0ShopPage/FeaturedText/FeaturedText.css
@@ -8,6 +8,8 @@ div.featured {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-top: 11vh;
+        margin-bottom: 5vh;
 
         h1 {
             font-size: 23px;
