--- a/src/components/0ShopPage/Navigation/Navigation.css
+++ b/src/components/0ShopPage/Navigation/Navigation.css
@@ -16,5 +16,13 @@
             font-size: 25px;
             cursor: pointer;
         }
+
+        .chat {
+            font-size: 22px !important;
+        }
+
+        .storefront {
+            font-size: 24px !important;
+        }
     }
 }
