--- a/src/components/0ShopPage/NavigationItem/NavigationItem.css
+++ b/src/components/0ShopPage/NavigationItem/NavigationItem.css
@@ -11,6 +11,7 @@
     
             p {
                 margin-left: -10px;
+                font-size: 14px;
             }
         }
 }
